--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -44,7 +44,7 @@ development:
 
     # Raise an error when performing a #find and the document is not found.
     # (default: true)
-      raise_not_found_error: false
+    raise_not_found_error: false
 
     # Raise an error when defining a scope with the same name as an
     # existing method. (default: false)
@@ -101,7 +101,8 @@ production:
        # refresh_interval specifies the number of seconds to cache server information.
        # Lowering this number will help the driver recover more quickly from changes to replica set reconfiguration
        refresh_interval: 10
-
+       # Adding a setting to not allow errors in heroku
+       raise_not_found_error: false
        # pool_size default size is 5 connections.
        # If you're running a lot of threads, you may consider increasing pool_size
        # to the number of threads you're running e.g.
