trying to fix stuff again

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -102,8 +102,9 @@ production:
        # Lowering this number will help the driver recover more quickly from changes to replica set reconfiguration
        refresh_interval: 10
        # Adding a setting to not allow errors in heroku
-       raise_not_found_error: false
        # pool_size default size is 5 connections.
        # If you're running a lot of threads, you may consider increasing pool_size
        # to the number of threads you're running e.g.
        # poolsize: <%= ENV['NUM_THREADS'] %>
+  options:
+    raise_not_found_error: false
