adding this to the produciton side

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -106,3 +106,5 @@ production:
        # If you're running a lot of threads, you may consider increasing pool_size
        # to the number of threads you're running e.g.
        # poolsize: <%= ENV['NUM_THREADS'] %>
+       options:
+          raise_not_found_error: false
